fix: footer wrap text

--- a/src/pages/Portfolio/features/PortfolioContent/AppCenter/AppCenter.scss
+++ b/src/pages/Portfolio/features/PortfolioContent/AppCenter/AppCenter.scss
@@ -28,6 +28,12 @@
             grid-area: 3 / 1 / 3 / 1;
         }
     }
+    .app_center-explore_more {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: row;
+    }
   }
 
 @media only screen and (max-width:1230px) {
@@ -58,3 +64,4 @@
         flex-direction: column;
     }
   }
+
